--- a/.gitignore
+++ b/.gitignore
@@ -59,27 +59,12 @@ typings/
 # dotenv environment variables file
 .env
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# Nuxt generate
-dist
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
 # IDE
 .idea
 .history
 
 # additional
 dist
+build
+tmp
+temp
