--- a/package.json
+++ b/package.json
@@ -1,69 +1,74 @@
 {
-  "name": "attachment-cms",
-  "version": "0.0.1",
-  "description": "",
-  "author": "sryuji",
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && npm run build",
-    "start:prod": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
-  "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/platform-express": "^6.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
-  },
-  "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
-    "@types/supertest": "^2.0.7",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-typescript": "^2.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "jest": "^23.6.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.16.4",
-    "supertest": "^3.4.1",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^8.0.3",
-    "tsconfig-paths": "^3.7.0",
-    "typescript": "3.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
-  "browserslist": [
-    "> 1% in JP"
-  ]
+   "name": "attachment-cms",
+   "version": "0.0.1",
+   "description": "",
+   "author": "sryuji",
+   "license": "MIT",
+   "private": true,
+   "scripts": {
+      "build": "tsc -p tsconfig.build.json",
+      "format": "prettier --write \"src/**/*.ts\"",
+      "start": "ts-node src/app/main.ts",
+      "start:dev": "nodemon",
+      "start:debug": "nodemon --config nodemon-debug.json",
+      "prestart:prod": "rimraf dist && npm run build",
+      "start:prod": "node dist/main.js",
+      "lint": "tslint -p tsconfig.json -c tslint.json",
+      "test": "jest",
+      "test:watch": "jest --watch",
+      "test:cov": "jest --coverage",
+      "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+      "test:e2e": "jest --config ./test/jest-e2e.json"
+   },
+   "dependencies": {
+      "@nestjs/common": "^6.0.0",
+      "@nestjs/core": "^6.0.0",
+      "@nestjs/platform-express": "^6.0.0",
+      "@nestjs/typeorm": "^6.0.0",
+      "@types/dotenv": "^6.1.1",
+      "dotenv": "^7.0.0",
+      "reflect-metadata": "^0.1.10",
+      "rimraf": "^2.6.2",
+      "rxjs": "^6.3.3",
+      "sqlite3": "^4.0.6",
+      "typeorm": "0.2.16"
+   },
+   "devDependencies": {
+      "@nestjs/testing": "^6.0.0",
+      "@types/express": "^4.16.0",
+      "@types/jest": "^23.3.13",
+      "@types/node": "^8.0.29",
+      "@types/supertest": "^2.0.7",
+      "@typescript-eslint/eslint-plugin": "^1.5.0",
+      "@typescript-eslint/parser": "^1.5.0",
+      "eslint": "^5.16.0",
+      "eslint-config-prettier": "^4.1.0",
+      "eslint-config-typescript": "^2.0.0",
+      "eslint-plugin-prettier": "^3.0.1",
+      "jest": "^23.6.0",
+      "nodemon": "^1.18.9",
+      "prettier": "^1.16.4",
+      "supertest": "^3.4.1",
+      "ts-jest": "^23.10.5",
+      "ts-node": "3.3.0",
+      "tsconfig-paths": "^3.7.0",
+      "typescript": "2.5.2"
+   },
+   "jest": {
+      "moduleFileExtensions": [
+         "js",
+         "json",
+         "ts"
+      ],
+      "rootDir": "src",
+      "testRegex": ".spec.ts$",
+      "transform": {
+         "^.+\\.(t|j)s$": "ts-jest"
+      },
+      "coverageDirectory": "../coverage",
+      "testEnvironment": "node"
+   },
+   "browserslist": [
+      "> 1% in JP"
+   ]
 }
