--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -17,12 +18,9 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@/*": ["./*"],
-      "~/*": ["./*"],
+      "~/*": ["./*"]
     },
-    "typeRoots": [
-      "node_modules/@types",
-      "src/types",
-    ]
+    "typeRoots": ["node_modules/@types", "src/types"]
   },
   "exclude": ["node_modules"]
 }
