feat: Scope登録/編集/削除/一覧/詳細APIの実装. 共通部品の追加
baseService/validation/timeoutInterceptor/loggingInterceptor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,7 @@
   "editor.formatOnSave": false,
   "prettier.eslintIntegration": true,
   "prettier.stylelintIntegration": true,
+  "prettier.printWidth": 120,
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 120,
 }
