--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
       "test:cov": "jest --coverage",
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
-      "orm": "ts-node ./node_modules/.bin/typeorm"
+      "orm": "ts-node ./node_modules/.bin/typeorm",
+      "tables": "yarn run orm query \"select name from sqlite_master where type = 'table'\"",
+      "reproject": "yarn run orm schema:drop && yarn run orm migration:run"
    },
    "dependencies": {
       "@nestjs/common": "^6.0.0",
@@ -28,6 +30,9 @@
       "@nestjs/platform-express": "^6.0.0",
       "@nestjs/typeorm": "^6.0.0",
       "@types/dotenv": "^6.1.1",
+      "class-transformer": "^0.2.0",
+      "class-validator": "^0.9.1",
+      "date-fns": "^1.30.1",
       "dotenv": "^7.0.0",
       "reflect-metadata": "^0.1.10",
       "rimraf": "^2.6.2",
