--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "typeorm": "0.2.16"
    },
    "devDependencies": {
+      "@nestjs/swagger": "^3.0.2",
       "@nestjs/testing": "^6.0.0",
       "@types/express": "^4.16.0",
       "@types/jest": "^23.3.13",
@@ -56,6 +57,7 @@
       "nodemon": "^1.18.9",
       "prettier": "^1.16.4",
       "supertest": "^3.4.1",
+      "swagger-ui-express": "^4.0.2",
       "ts-jest": "^23.10.5",
       "ts-node": "^8.0.3",
       "tsconfig-paths": "^3.7.0",
