--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "scripts": {
       "build": "tsc -p tsconfig.build.json",
       "format": "prettier --write \"src/**/*.ts\"",
-      "start": "ts-node src/app/main.ts",
+      "start": "ts-node -r tsconfig-paths/register src/app/main.ts",
       "start:dev": "nodemon",
       "start:debug": "nodemon --config nodemon-debug.json",
       "prestart:prod": "rimraf dist && npm run build",
@@ -25,7 +25,8 @@
       "orm:migrate": "yarn run orm migration:run",
       "orm:rollback": "yarn run orm migration:revert",
       "orm:tables": "yarn run orm query \"select name from sqlite_master where type = 'table'\"",
-      "orm:drop": "yarn run orm schema:drop"
+      "orm:drop": "yarn run orm schema:drop",
+      "repl": "yarn run ts-node -r tsconfig-paths/register -r ./src/command/repl"
    },
    "dependencies": {
       "@nestjs/common": "^6.0.0",
