--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "scripts": {
       "build": "tsc -p tsconfig.build.json",
       "format": "prettier --write \"src/**/*.ts\"",
-      "start": "ts-node -r tsconfig-paths/register src/app/main.ts",
+      "start": "yarn run ts src/app/main.ts",
       "start:dev": "nodemon",
       "start:debug": "nodemon --config nodemon-debug.json",
       "prestart:prod": "rimraf dist && npm run build",
@@ -20,13 +20,15 @@
       "test:cov": "jest --coverage",
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
-      "orm": "yarn run ts-node ./node_modules/.bin/typeorm",
+      "orm": "yarn run ts ./node_modules/.bin/typeorm",
       "orm:generate": "yarn run orm migration:generate",
       "orm:migrate": "yarn run orm migration:run",
       "orm:rollback": "yarn run orm migration:revert",
       "orm:tables": "yarn run orm query \"select name from sqlite_master where type = 'table'\"",
       "orm:drop": "yarn run orm schema:drop",
-      "repl": "yarn run ts-node -r tsconfig-paths/register -r ./src/command/repl"
+      "ts": "ts-node -r tsconfig-paths/register",
+      "repl": "yarn run ts -r ./src/command/repl",
+      "command": "yarn run ts ./src/command/runner.ts"
    },
    "dependencies": {
       "@nestjs/common": "^6.0.0",
