--- a/package.json
+++ b/package.json
@@ -1,92 +1,95 @@
 {
-   "name": "attachment-cms",
-   "version": "0.0.1",
-   "description": "",
-   "author": "sryuji",
-   "license": "MIT",
-   "private": true,
-   "scripts": {
-      "build": "tsc -p tsconfig.build.json",
-      "format": "prettier --write \"src/**/*.ts\"",
-      "start": "yarn run ts src/app/main.ts",
-      "start:dev": "nodemon",
-      "start:debug": "nodemon --config nodemon-debug.json",
-      "prestart:prod": "rimraf dist && npm run build",
-      "start:prod": "node dist/main.js",
-      "lint": "yarn run lint:es",
-      "lint:es": "eslint --ext .js,.ts --ignore-path .gitignore .",
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:cov": "jest --coverage",
-      "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-      "test:e2e": "jest --config ./test/jest-e2e.json",
-      "orm": "yarn run ts ./node_modules/.bin/typeorm",
-      "orm:generate": "yarn run orm migration:generate",
-      "orm:migrate": "yarn run orm migration:run",
-      "orm:rollback": "yarn run orm migration:revert",
-      "orm:tables": "yarn run orm query \"select name from sqlite_master where type = 'table'\"",
-      "orm:drop": "yarn run orm schema:drop",
-      "ts": "ts-node -r tsconfig-paths/register",
-      "repl": "yarn run ts -r ./src/command/repl",
-      "command": "yarn run ts ./src/command/runner.ts",
-      "seed": "yarn run command seed-runner"
-   },
-   "dependencies": {
-      "@nestjs/common": "^6.0.0",
-      "@nestjs/core": "^6.0.0",
-      "@nestjs/platform-express": "^6.0.0",
-      "@nestjs/typeorm": "^6.0.0",
-      "@types/dotenv": "^6.1.1",
-      "class-transformer": "^0.2.0",
-      "class-validator": "^0.9.1",
-      "date-fns": "^1.30.1",
-      "dotenv": "^7.0.0",
-      "reflect-metadata": "^0.1.10",
-      "rimraf": "^2.6.2",
-      "rxjs": "^6.3.3",
-      "sqlite3": "^4.0.6",
-      "typeorm": "0.2.16",
-      "uuid": "^3.3.2"
-   },
-   "devDependencies": {
-      "@nestjs/swagger": "^3.0.2",
-      "@nestjs/testing": "^6.0.0",
-      "@types/express": "^4.16.0",
-      "@types/jest": "^23.3.13",
-      "@types/node": "^8.0.29",
-      "@types/supertest": "^2.0.7",
-      "@types/uuid": "^3.4.4",
-      "@typescript-eslint/eslint-plugin": "^1.5.0",
-      "@typescript-eslint/parser": "^1.5.0",
-      "eslint": "^5.16.0",
-      "eslint-config-prettier": "^4.1.0",
-      "eslint-config-typescript": "^2.0.0",
-      "eslint-plugin-prettier": "^3.0.1",
-      "jest": "^23.6.0",
-      "nodemon": "^1.18.9",
-      "prettier": "^1.16.4",
-      "supertest": "^3.4.1",
-      "swagger-ui-express": "^4.0.2",
-      "ts-jest": "^23.10.5",
-      "ts-node": "^8.0.3",
-      "tsconfig-paths": "^3.7.0",
-      "typescript": "~3.3"
-   },
-   "jest": {
-      "moduleFileExtensions": [
-         "js",
-         "json",
-         "ts"
-      ],
-      "rootDir": "src",
-      "testRegex": ".spec.ts$",
-      "transform": {
-         "^.+\\.(t|j)s$": "ts-jest"
-      },
-      "coverageDirectory": "../coverage",
-      "testEnvironment": "node"
-   },
-   "browserslist": [
-      "> 1% in JP"
-   ]
+  "name": "attachment-cms",
+  "version": "0.0.1",
+  "description": "",
+  "author": "sryuji",
+  "license": "MIT",
+  "private": true,
+  "engines": {
+    "node": "14.x"
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "start": "yarn run ts src/app/main.ts",
+    "start:dev": "nodemon",
+    "start:debug": "nodemon --config nodemon-debug.json",
+    "prestart:prod": "rimraf dist && npm run build",
+    "start:prod": "node dist/main.js",
+    "lint": "yarn run lint:es",
+    "lint:es": "eslint --ext .js,.ts --ignore-path .gitignore .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "orm": "yarn run ts ./node_modules/.bin/typeorm",
+    "orm:generate": "yarn run orm migration:generate",
+    "orm:migrate": "yarn run orm migration:run",
+    "orm:rollback": "yarn run orm migration:revert",
+    "orm:tables": "yarn run orm query \"select name from sqlite_master where type = 'table'\"",
+    "orm:drop": "yarn run orm schema:drop",
+    "ts": "ts-node -r tsconfig-paths/register",
+    "repl": "yarn run ts -r ./src/command/repl",
+    "command": "yarn run ts ./src/command/runner.ts",
+    "seed": "yarn run command seed-runner"
+  },
+  "dependencies": {
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/core": "^8.0.6",
+    "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/typeorm": "^8.0.2",
+    "@types/dotenv": "^8.2.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "date-fns": "^2.24.0",
+    "dotenv": "^10.0.0",
+    "reflect-metadata": "^0.1.10",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.3.0",
+    "sqlite3": "^5.0.2",
+    "typeorm": "0.2.37",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/testing": "^8.0.6",
+    "@types/express": "^4.16.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.4",
+    "@types/supertest": "^2.0.7",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.2.0",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.4.1",
+    "supertest": "^6.1.6",
+    "swagger-ui-express": "^4.0.2",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.7.0",
+    "typescript": "~4.4.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
+  "browserslist": [
+    "> 1% in JP"
+  ]
 }
