--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "test", "**/*spec.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tmp",
+    "test",
+    "**/*spec.ts",
+    ".vscode",
+    "env"
+  ]
 }
