chore: change repository name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "attachment-cms",
+  "name": "attachment-cms-server",
   "version": "0.0.1",
   "description": "",
   "author": "sryuji",
