--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "buildDts": "tsc -p tsconfig.dts.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "yarn run ts src/app/main.ts",
     "start:dev": "nodemon",
