feat: googleアカウントとJWT認証、権限、アカウント管理機能の設置

--- a/env/development.env
+++ b/env/development.env
@@ -2,3 +2,8 @@ NODE_ENV=development
 DATABASE=tmp/development.sqlite3
 ORM_LOGGING=true
 ORM_SYNCHRONIZE=false
+GOOGLE_CLIENT_ID=617728194977-56261hpn44hbm1td6jvgcd4sh4pvkns4.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=wTNdTijJ7KWQ0XKTsX1zJk6X
+API_BASE_URL=http://localhost:3000
+WEB_BASE_URL=http://localhost:3001
+JWT_SECRET=secret
