--- a/package.json
+++ b/package.json
@@ -37,13 +37,20 @@
   "dependencies": {
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^8.2.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.10",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
@@ -57,6 +64,8 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.4",
+    "@types/passport-google-oauth20": "^2.0.9",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
