feat: seedファイルの整備と、seed runnerの不備の訂正

--- a/env/development.env
+++ b/env/development.env
@@ -7,3 +7,4 @@ GOOGLE_CLIENT_SECRET=wTNdTijJ7KWQ0XKTsX1zJk6X
 API_BASE_URL=http://localhost:3000
 WEB_BASE_URL=http://localhost:3001
 JWT_SECRET=secret
+TEST_USER_EMAIL=
