chore: upgrade eslint.
refactor: fix eslint warn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,7 @@
   "eslint.run": "onSave",
   "eslint.packageManager": "yarn",
   "eslint.options": {
-    "configFile": ".eslintrc.js"
+    "overrideConfigFile": ".eslintrc.js"
   },
   // prettier
   "prettier.printWidth": 120
