--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "buildDts": "tsc -p tsconfig.dts.json",
+    "build:types": "tsc -p tsconfig.build.types.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
