feat: server環境のdocker development対応.  postgres対応

--- a/env/production.env
+++ b/env/production.env
@@ -1,9 +1,9 @@
 NODE_ENV=production
-DATABASE_HOST=
-DATABASE_PORT=3306
-DATABASE_USERNAME=acmsadmin
-DATABASE_PASSWORD=dummy
-DATABASE_NAME=attachment_cms_production
+POSTGRES_HOST=
+POSTGRES_PORT=5432
+POSTGRES_USER=acmsadmin
+POSTGRES_PASSWORD=dummy
+POSTGRES_DB=attachment_cms_production
 GOOGLE_CLIENT_ID=dummy
 GOOGLE_CLIENT_SECRET=dummy
 API_BASE_URL=http://localhost:3000
