--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && npm run build",
+    "prestart:prod": "rimraf dist && yarn build",
     "start:prod": "node dist/main.js",
     "lint": "yarn run lint:es",
     "lint:es": "eslint --ext .js,.ts .",
@@ -43,8 +43,6 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/dotenv": "^8.2.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -53,16 +51,18 @@
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.10",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
-    "sqlite3": "^5.0.2",
     "typeorm": "0.2.38",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/testing": "^8.1.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.11.6",
@@ -78,6 +78,7 @@
     "jest": "^27.2.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.1",
+    "sqlite3": "^5.0.2",
     "supertest": "^6.1.6",
     "swagger-ui-express": "^4.0.2",
     "ts-jest": "^27.0.5",
