feat: 本番環境向けにconfigを整備

--- a/env/production.env
+++ b/env/production.env
@@ -2,10 +2,10 @@ NODE_ENV=production
 POSTGRES_HOST=
 POSTGRES_PORT=5432
 POSTGRES_USER=acmsadmin
-POSTGRES_PASSWORD=dummy
-POSTGRES_DB=attachment_cms_production
-GOOGLE_CLIENT_ID=dummy
-GOOGLE_CLIENT_SECRET=dummy
-API_BASE_URL=http://localhost:3000
-WEB_BASE_URL=http://localhost:3001
-JWT_SECRET=dummy
+POSTGRES_PASSWORD=
+POSTGRES_DB=attachment_cms
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+API_BASE_URL=https://api.attachment-cms.dev
+WEB_BASE_URL=https://attachment-cms.dev
+JWT_SECRET=
