--- a/env/production.env
+++ b/env/production.env
@@ -9,3 +9,4 @@ GOOGLE_CLIENT_SECRET=
 API_BASE_URL=https://api.attachment-cms.dev
 WEB_BASE_URL=https://attachment-cms.dev
 JWT_SECRET=
+SENTRY_DSN=
