--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
+    "@sentry/integrations": "^6.14.1",
+    "@sentry/node": "^6.14.1",
+    "@sentry/tracing": "^6.14.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -55,6 +58,7 @@
     "reflect-metadata": "^0.1.10",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
+    "tslib": "^2.3.1",
     "typeorm": "0.2.38",
     "uuid": "^8.3.2"
   },
