--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "start:prod": "node dist/main.js",
     "lint": "yarn run lint:es",
     "lint:es": "eslint --ext .js,.ts .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "node --trace-warnings node_modules/.bin/jest --unhandled-rejections=strict",
+    "test:watch": "yarn test --watch",
+    "test:cov": "yarn test --coverage",
+    "test:debug": "node --inspect-brk --trace-warnings -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --detectOpenHandles --unhandled-rejections=strict",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "orm": "yarn run ts ./node_modules/.bin/typeorm",
     "orm:generate": "yarn run orm migration:generate",
@@ -43,6 +43,7 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
+    "@sendgrid/mail": "^7.6.0",
     "@sentry/integrations": "^6.14.1",
     "@sentry/node": "^6.14.1",
     "@sentry/tracing": "^6.14.1",
@@ -89,20 +90,6 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.7.0",
     "typescript": "~4.4.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   },
   "browserslist": [
     "> 1% in JP"
