--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "reflect-metadata": "^0.1.10",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.11.0",
     "tslib": "^2.3.1",
-    "typeorm": "0.2.38",
+    "typescript": "^4.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -86,10 +88,7 @@
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.6",
     "swagger-ui-express": "^4.0.2",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.7.0",
-    "typescript": "~4.4.3"
+    "ts-jest": "^27.0.5"
   },
   "browserslist": [
     "> 1% in JP"
