--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
     "@sendgrid/mail": "^7.6.0",
     "@sentry/integrations": "^6.14.1",
@@ -69,11 +70,11 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
     "tslib": "^2.3.1",
+    "typeorm": "^0.2.40",
     "typescript": "^4.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/swagger": "^5.1.4",
     "@nestjs/testing": "^8.1.2",
     "@types/jest": "^27.0.1",
     "@types/supertest": "^2.0.7",
