--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,13 +1,10 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "sourceMap": true,
+    "inlineSources": true,
+    "sourceRoot": "/"
+  },
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "tmp",
-    "test",
-    "**/*spec.ts",
-    ".vscode",
-    "env"
-  ]
+  "exclude": ["node_modules", "dist", "tmp", "test", "**/*spec.ts", ".vscode", "env"]
 }
