--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
+    "htmlparser2": "^7.2.0",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
