feat: contentは、root nodeが無ければ作り、html IDを付与する
chore: update npm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
     "overrideConfigFile": ".eslintrc.js"
   },
   // prettier
-  "prettier.printWidth": 120
+  "prettier.printWidth": 120,
+  "jest.jestCommandLine": "yarn jest"
 }
