--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "@types/passport-google-oauth20": "^2.0.9",
     "@types/passport-jwt": "^3.0.6",
     "@types/uuid": "^8.3.1",
-    "class-transformer": "^0.4.0",
+    "@types/validator": "^13.7.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.24.0",
+    "dom-serializer": "^1.3.2",
     "dotenv": "^10.0.0",
     "htmlparser2": "^7.2.0",
     "passport": "^0.5.0",
