--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.24.0",
     "dom-serializer": "^1.3.2",
+    "domhandler": "^4.2.2",
     "dotenv": "^10.0.0",
     "htmlparser2": "^7.2.0",
     "passport": "^0.5.0",
