--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "repl": "yarn run ts -r ./src/command/repl",
     "command": "yarn run ts ./src/command/runner.ts",
     "seed": "yarn run command seed-runner",
-    "seed:dev": "NODE_ENV=development yarn run seed account scope account-scope release content-history",
-    "seed:test": "NODE_ENV=test yarn run seed account scope account-scope release content-history",
+    "seed:dev": "NODE_ENV=development yarn run seed account scope account-scope release content-history plugin",
+    "seed:test": "NODE_ENV=test yarn run seed account scope account-scope release content-history plugin",
     "seed:prod": "NODE_ENV=production yarn run seed scope"
   },
   "dependencies": {
